Fixed some spacings @ activities page

--- a/app/client/stylesheets/components/compositions/pu-composition-partupdetailactivities.sass
+++ b/app/client/stylesheets/components/compositions/pu-composition-partupdetailactivities.sass
@@ -1,5 +1,9 @@
 .pu-composition-partupdetailactivities
     .pu-pageheader
-        margin-bottom: 20px
+        margin-bottom: 40px
+
     .pu-textline
         margin: 30px 0px 30px 0px
+
+    .pu-block-activity
+        
