--- a/app/client/stylesheets/components/pu-block.sass
+++ b/app/client/stylesheets/components/pu-block.sass
@@ -177,7 +177,7 @@
             font-size: 14px
 
         .pu-sub-title
-            font-size: 19px
+            font-size: 20px
 
             &:last-child
                 margin-bottom: 0
@@ -193,9 +193,16 @@
         .pu-block-meta
             margin-top: -5px
             margin-bottom: -11px
+            min-height: 34px
 
         .pu-sub-date
             margin-right: 6px
+
+        .pu-sub-comments
+            font-size: 12px
+
+            i
+                margin-right: 4px
 
         &.pu-state-contributions
             .pu-sub-editbutton
